--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="./demo/easy-file-saver.js"></script>
+    <script src="https://unpkg.com/easy-file-saver"></script>
     <script src="./demo/json-to-code.min.js"></script>
   </head>
   <body>
