--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://unpkg.com/easy-file-saver"></script>
-    <script src="./demo/json-to-code.min.js"></script>
+    <script src="./json-to-code.min.js"></script>
   </head>
   <body>
     <h1>json-to-code compression demo</h1>
